# agar.io

./: .gitmodules  CMakeLists.txt
Agar-libs/glad/include/glad/: glad.h
assets/shaders/: world.frag  world.vert
server/: main.cpp
src/: glad.c  main.cpp
src/engine/: engine.cpp  engine.h
src/engine/graphics/: framebuffer.cpp  framebuffer.h  mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h
src/engine/io/: input.h  logger.cpp  logger.h  window.cpp  window.h
src/engine/util/: maths.cpp  maths.h  physics.cpp  physics.h  time.cpp  time.h
